--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
 
 <body>
     <header>
-
+        <nav>
+            <img src="assets/São-Paulo-Escudo.webp" alt="Icone do São Paulo">
+            <h1>Site de Notiias do São Paulo</h1>
+            <ul>
+                <li>Club</li>
+                <li>Aquivo</li>
+                <li>Sair</li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <section id="noticias">
+            <div class="noticia">
+                <img src="assets/Barolo.jfif" alt="">
+                <h3>São Paulo vence novamente e Barolo não muda de opnião</h3>
+                <p>Após vitoria do tricolor, Barolo insiste em dizer que o goleiro Rafael é um goleiro nota 6 mesmo com defesas incriveis. </p>
+            </div>
+        </section>
     </main>
     <footer>
 
