add- segunda noticia

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site do São Paulo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <img src="assets/São-Paulo-Escudo.webp" alt="Icone do São Paulo">
-            <h1>Site de Notiias do São Paulo</h1>
+            <img id="icon" src="assets/Brasao_do_Sao_Paulo.webp" alt="Icone do São Paulo">
+            <h1>Site de Noticias do São Paulo</h1>
             <ul>
                 <li>Club</li>
                 <li>Aquivo</li>
@@ -21,9 +22,21 @@
     <main>
         <section id="noticias">
             <div class="noticia">
-                <img src="assets/Barolo.jfif" alt="">
-                <h3>São Paulo vence novamente e Barolo não muda de opnião</h3>
+                <img class="img_noticia" src="assets/Barolo.jfif" alt="Barolo">
+                <h3>São Paulo vence novamente e Barolo não muda de opnião.</h3>
                 <p>Após vitoria do tricolor, Barolo insiste em dizer que o goleiro Rafael é um goleiro nota 6 mesmo com defesas incriveis. </p>
+            </div>
+
+             <div class="noticia">
+                <img class="img_noticia" src="assets/vitoria-do-São-Paulo.png" alt="São Paulo Vioria">
+                <h3>São Paulo vence o Coritiba fora de casa!</h3>
+                <p>O tricolor paulista conquista grande fora de casa com os seus reservas! São Paulo vencer com um gol de penalti do Cauly aos 57 minutos. </p>
+            </div>
+
+            <div class="noticia">
+                <img class="img_noticia" src="assets/vitoria-do-São-Paulo.png" alt="São Paulo Vioria">
+                <h3>São Paulo vence o Coritiba fora de casa!</h3>
+                <p>O tricolor paulista conquista grande fora de casa com os seus reservas! São Paulo vencer com um gol de penalti do Cauly aos 57 minutos. </p>
             </div>
         </section>
     </main>
