add- quarta noticia

--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
             </div>
 
             <div class="noticia">
-                <img class="img_noticia" src="assets/vitoria-do-São-Paulo.png" alt="São Paulo Vioria">
-                <h3>São Paulo vence o Coritiba fora de casa!</h3>
-                <p>O tricolor paulista conquista grande fora de casa com os seus reservas! São Paulo vencer com um gol de penalti do Cauly aos 57 minutos. </p>
+                <img class="img_noticia" src="assets/São-Paulo-semi.png" alt="São Paulo Semifinalista">
+                <h3>São Paulo está na Semifinal do Paulistão 2026</h3>
+                <p>O tricolor paulista vence do bragantino e alcança a Semifinal! com muitas polemicas e brigas em campo o São Paulo sai vitorioso. </p>
             </div>
+
+            <div class="noticia">
+                <img class="img_noticia" src="assets/Crespo.png" alt="River está atrás do Crespo">
+                <h3>São Paulo está na Semifinal do Paulistão 2026</h3>
+                <p>O tricolor paulista vence do bragantino e alcança a Semifinal!  </p>
+            </div>
+
         </section>
     </main>
     <footer>
-
+        <p>Todos os Direitos Reservados </p>
     </footer>
 </body>
 
