--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
         <section id="noticias">
             <div class="noticia">
                 <img class="img_noticia" src="assets/Barolo.jfif" alt="Barolo">
-                <h3>São Paulo vence novamente e Barolo não muda de opnião.</h3>
-                <p>Após vitoria do tricolor, Barolo insiste em dizer que o goleiro Rafael é um goleiro nota 6 mesmo com defesas incriveis. </p>
+                <h3>Barolo não muda de opnião.</h3>
+                <p>Barolo insite que o Rafael é um goleiro nota 6. Bicho chato </p>
             </div>
 
              <div class="noticia">
                 <img class="img_noticia" src="assets/vitoria-do-São-Paulo.png" alt="São Paulo Vioria">
                 <h3>São Paulo vence o Coritiba fora de casa!</h3>
-                <p>O tricolor paulista conquista grande fora de casa com os seus reservas! São Paulo vencer com um gol de penalti do Cauly aos 57 minutos. </p>
+                <p>Saaallve o Tricolor Paulistaa!! </p>
             </div>
 
             <div class="noticia">
                 <img class="img_noticia" src="assets/São-Paulo-semi.png" alt="São Paulo Semifinalista">
                 <h3>São Paulo está na Semifinal do Paulistão 2026</h3>
-                <p>O tricolor paulista vence do bragantino e alcança a Semifinal! com muitas polemicas e brigas em campo o São Paulo sai vitorioso. </p>
+                <p>São Paulo vence e vai para a semifinal.</p>
             </div>
 
             <div class="noticia">
                 <img class="img_noticia" src="assets/Crespo.png" alt="River está atrás do Crespo">
-                <h3>São Paulo está na Semifinal do Paulistão 2026</h3>
-                <p>O tricolor paulista vence do bragantino e alcança a Semifinal!  </p>
+                <h3>São Paulo segura o Crespo!</h3>
+                <p>O River está muito interesado por Crespo.  </p>
             </div>
 
         </section>
