add - adicionei os jogadores

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
             </div>
 
         </section>
+
+        <section class="escalação">
+            <div id="Titulo">
+                <h2>Escalação São Paulo</h2>
+            </div>
+            <div id="Jogadores">
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/Rafael.png" alt="Goleiro Rafael">
+                        <h5>Goleiro Rafael</h5>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
         <p>Todos os Direitos Reservados </p>
