add- adicionei os 3 zagueiros

--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
                         <h5>Goleiro Rafael</h5>
                 </div>
 
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/Alan-Franco.png" alt="Zagueiro Alan Franco">
+                        <h5>Zagueiro Alan Franco</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/Arboleda.png" alt="Zaguiro Arboleda">
+                        <h5>Zagueiro Arboleda</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/Sabino.png" alt="Zagueiro Sabino">
+                        <h5>Zagueiro Sabino</h5>
+                </div>
+
             </div>
         </section>
     </main>
