--- a/index.html
+++ b/index.html
@@ -53,23 +53,58 @@
             </div>
             <div id="Jogadores">
                 <div class="jogador">
-                    <img id="icon_jogador" src="assets/jogadores/Rafael.png" alt="Goleiro Rafael">
-                        <h5>Goleiro Rafael</h5>
+                    <img id="icon_jogador" src="assets/jogadores/rafael.png" alt="Goleiro Rafael">
+                        <h5>Rafael</h5>
                 </div>
 
                 <div class="jogador">
-                    <img id="icon_jogador" src="assets/jogadores/Alan-Franco.png" alt="Zagueiro Alan Franco">
-                        <h5>Zagueiro Alan Franco</h5>
+                    <img id="icon_jogador" src="assets/jogadores/alan-franco.png" alt="Zagueiro Alan Franco">
+                        <h5>Alan Franco</h5>
                 </div>
 
                 <div class="jogador">
-                    <img id="icon_jogador" src="assets/jogadores/Arboleda.png" alt="Zaguiro Arboleda">
-                        <h5>Zagueiro Arboleda</h5>
+                    <img id="icon_jogador" src="assets/jogadores/arboleda.png" alt="Zaguiro Arboleda">
+                        <h5>Arboleda</h5>
                 </div>
 
                 <div class="jogador">
-                    <img id="icon_jogador" src="assets/jogadores/Sabino.png" alt="Zagueiro Sabino">
-                        <h5>Zagueiro Sabino</h5>
+                    <img id="icon_jogador" src="assets/jogadores/sabino.png" alt="Zagueiro Sabino">
+                        <h5>Sabino</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/enzo.png" alt="Enzo Días">
+                        <h5>Enzo Días</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/danielzinho.png" alt="Meio-campista Danielzinho">
+                        <h5>Danielzinho</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/marcos-antonio.png" alt="Meio-campista Marcos Antônio">
+                        <h5>Marcos Antônio</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/d-bobadilla.png" alt="Meio-campista Bobadilla">
+                        <h5>Bobadilla</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/lucas.png" alt="Lucas Moura">
+                        <h5>Lucas Moura</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/luciano.png" alt="Luciano">
+                        <h5>Luciano</h5>
+                </div>
+
+                <div class="jogador">
+                    <img id="icon_jogador" src="assets/jogadores/calleri.png" alt="Calleri">
+                        <h5>Calleri</h5>
                 </div>
 
             </div>
