up - finalizado com os gifs

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
                 </div>
 
             </div>
+
+            <img id="gif" src="assets/escudo-girando-spfc.gif" alt>
+            <img id="gif_luciano" src="assets/luciano-chutando.gif" alt>
         </section>
+
     </main>
     <footer>
         <p>Todos os Direitos Reservados </p>
